--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
   text-align: center;
 }
 
+
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -14,15 +17,21 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #F5F5F5;
+  font-family: 'Play', sans-serif;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 14px;
+  
+  color: black;
 }
+
+
+
+
 
 .App-link {
   color: #61dafb;
