--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
-}
+  background-color: #F5F5F5;
 
+}
 
 
 
@@ -27,6 +28,53 @@
   font-size: 14px;
   
   color: black;
+}
+
+.dashboard-container{
+  background-color: #F5F5F5;
+  font-family: 'Play', sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  color: black;
+
+}
+
+.sidebar-container{
+
+  background-color: #F5F5F5;
+  font-family: 'Play', sans-serif;
+  color: black;
+}
+
+.create-account-form {
+
+  background-color: #F5F5F5;
+  font-family: 'Play', sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  color: black;
+
+}
+
+.footer-container {
+
+  background-color: #F5F5F5;
+  font-family: 'Play', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  color: black;
+
 }
 
 
