--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,19 @@
 
 }
 
+.account-container{
+  background-color: #F5F5F5;
+  font-family: 'Play', sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  color: black;
+
+}
+
 .sidebar-container{
 
   background-color: #F5F5F5;
