--- a/src/App.css
+++ b/src/App.css
@@ -79,14 +79,14 @@
 
 .footer-container {
 
-  background-color: #F5F5F5;
+  background-color: #212529;
   font-family: 'Play', sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: 14px;
-  color: black;
+  color: white;
 
 }
 
