--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+html { height: 100%; }
+
+
+body {
+  min-height:100%; 
+  position:relative; 
+  padding-bottom:[footer-height] 
+}
+
 .App {
   text-align: center;
   background-color: #F5F5F5;
@@ -87,6 +96,10 @@
   justify-content: center;
   font-size: 14px;
   color: white;
+  position: absolute; 
+  left: 0 ; right: 0; bottom: 0; 
+  height:[footer-height] 
+  
 
 }
 
